# peroxide

./: .gitignore  Cargo.toml  NOTICE  README.md
.github/workflows/: tests.yml
doc/: macros.md  plan-of-action.md  synclos.md  todo.md
inputs/: count.scm  sc-test.scm
jupyter-kernel/: .gitignore  LICENSE  README.md  requirements.txt  setup.py
jupyter-kernel/peroxide/: __init__.py  __main__.py  install.py  peroxide_kernel.py
src/: arena.rs  ast.rs  compile.rs  continuation.rs  environment.rs  error.rs  eval.rs  gc.rs  heap.rs  lex.rs  lib.rs  macroexpand.rs  main.rs  parse.rs  primitives.rs  read.rs  repl.rs  test.rs  trampoline.rs  util.rs  value.rs  vm.rs
src/lib/: init.scm
src/primitives/: char.rs  extensions.rs  mod.rs  numeric.rs  object.rs  pair.rs  port.rs  string.rs  symbol.rs  syntactic_closure.rs  vector.rs
src/scheme-lib/: init.scm  r5rs-tests.scm  r5rs-tests.scm.orig  syntax-rules.scm.mine  syntax-rules.scm.orig
tests/: integration_tests.rs
tests/scheme/: r5rs-tests.scm  run-scheme.sh
