[package]
name = "peroxide"
version = "0.1.0"
authors = ["Matthieu Felix <matthieufelix@gmail.com>"]
license = "Apache-2.0"
publish = false

[dependencies]
bitvec = "0.17"
ctrlc = "3.1.4"
num-bigint = "0.2"
num-complex = "0.2"
num-integer = "0.1"
num-rational = "0.2"
num-traits = "0.2"
rustyline = "6.0"

# [profile.release]
# debug = true
