[package]
name = "peroxide"
version = "0.1.0"
authors = ["Matthieu Felix <matthieufelix@gmail.com>"]
license = "Apache-2.0"
publish = false

[dependencies]
bitvec = "0.17"
clap = "2.33"
ctrlc = "3.1"
num-bigint = "0.3"
num-complex = "0.3"
num-integer = "0.1"
num-rational = "0.3"
num-traits = "0.2"
rustyline = "6.2"

# [profile.release]
# debug = true
