[package]
name = "peroxide"
version = "0.1.0"
authors = ["Matthieu Felix <matthieufelix@gmail.com>"]
license = "Apache-2.0"
publish = false

[dependencies]
bitvec = "0.22"
clap = "2.34"
ctrlc = "3.2"
log = "0.4"
num-bigint = "0.4"
num-complex = "0.4"
num-integer = "0.1"
num-rational = "0.4"
num-traits = "0.2"
rustyline = "8.2"
pretty_env_logger = "0.4"

[profile.release]
debug = true
